# wayland_hwc3

./: Cargo.toml  gen_aidl.sh  gen_bindings.sh  gen_drm.sh  run-host.sh  run-vm.sh  run.sh
aidl/android/hardware/graphics/composer3/: IComposerClient.aidl
aidl/android/hardware/input/: IInputManager.aidl
aidl/android/view/: InputEvent.aidl  KeyEvent.aidl
android_hardware_common/: Cargo.toml
android_hardware_common/src/: lib.rs
android_hardware_common/src/aidl/android/hardware/common/: Ashmem.rs  MappableFile.rs  NativeHandle.rs
android_hardware_common/src/android/hardware/common/: MappableFile.rs  NativeHandle.rs
android_hardware_graphics_common/: Cargo.toml
android_hardware_graphics_common/src/: lib.rs
android_hardware_graphics_common/src/aidl/android/hardware/graphics/common/: AlphaInterpretation.rs  BlendMode.rs  BufferUsage.rs  ChromaSiting.rs  ColorTransform.rs  Compression.rs  Cta861_3.rs  Dataspace.rs  DisplayDecorationSupport.rs  ExtendableType.rs  FRect.rs  HardwareBuffer.rs  HardwareBufferDescription.rs  Hdr.rs  HdrConversionCapability.rs  HdrConversionStrategy.rs  Interlaced.rs  PixelFormat.rs  PlaneLayout.rs  PlaneLayoutComponent.rs  PlaneLayoutComponentType.rs  Point.rs  Rect.rs  Smpte2086.rs  StandardMetadataType.rs  Transform.rs  XyColor.rs
android_hardware_graphics_common/src/android/hardware/graphics/common/: AlphaInterpretation.rs  BlendMode.rs  ColorTransform.rs  Compression.rs  DisplayDecorationSupport.rs  ExtendableType.rs  HardwareBuffer.rs  HardwareBufferDescription.rs  Hdr.rs  HdrConversionStrategy.rs  Interlaced.rs  PixelFormat.rs  PlaneLayout.rs  PlaneLayoutComponentType.rs  Rect.rs  Smpte2086.rs  StandardMetadataType.rs  Transform.rs
android_hardware_graphics_composer/: Cargo.toml
android_hardware_graphics_composer/src/: lib.rs
android_hardware_graphics_composer/src/android/hardware/graphics/composer3/: Capability.rs  ChangedCompositionLayer.rs  ChangedCompositionTypes.rs  ClientTargetProperty.rs  ClientTargetPropertyWithBrightness.rs  Color.rs  ColorMode.rs  DisplayAttribute.rs  DisplayConnectionType.rs  DisplayContentSample.rs  IComposer.rs  OverlayProperties.rs  ParcelableBlendMode.rs  ParcelableDataspace.rs  ParcelableTransform.rs  PerFrameMetadataBlob.rs  PerFrameMetadataKey.rs  PowerMode.rs  PresentFence.rs  PresentOrValidate.rs  ReleaseFences.rs  VirtualDisplay.rs  VsyncPeriodChangeConstraints.rs  VsyncPeriodChangeTimeline.rs  ZOrder.rs
android_hardware_graphics_composer3/: Cargo.toml
android_hardware_graphics_composer3/src/: lib.rs
android_hardware_graphics_composer3/src/aidl/android/hardware/graphics/composer3/: Buffer.rs  Capability.rs  ChangedCompositionLayer.rs  ChangedCompositionTypes.rs  ClientTarget.rs  ClientTargetProperty.rs  ClientTargetPropertyWithBrightness.rs  ClockMonotonicTimestamp.rs  Color.rs  ColorMode.rs  CommandError.rs  CommandResultPayload.rs  Composition.rs  ContentType.rs  DimmingStage.rs  DisplayAttribute.rs  DisplayBrightness.rs  DisplayCapability.rs  DisplayCommand.rs  DisplayConnectionType.rs  DisplayContentSample.rs  DisplayContentSamplingAttributes.rs  DisplayIdentification.rs  DisplayRequest.rs  FormatColorComponent.rs  HdrCapabilities.rs  IComposer.rs  IComposerCallback.rs  IComposerClient.rs  LayerBrightness.rs  LayerCommand.rs  OverlayProperties.rs  ParcelableBlendMode.rs  ParcelableComposition.rs  ParcelableDataspace.rs  ParcelableTransform.rs  PerFrameMetadata.rs  PerFrameMetadataBlob.rs  PerFrameMetadataKey.rs  PlaneAlpha.rs  (+11 more)
android_hardware_graphics_composer3/src/android/hardware/graphics/composer3/: ClockMonotonicTimestamp.rs  CommandError.rs  Composition.rs  DimmingStage.rs  DisplayContentSamplingAttributes.rs  DisplayRequest.rs  IComposerCallback.rs  IComposerClient.rs  PerFrameMetadata.rs  ReadbackBufferAttributes.rs  RefreshRateChangedDebugData.rs
android_hardware_input/: Cargo.toml
android_hardware_input/src/: lib.rs
android_hardware_input/src/aidl/android/hardware/input/: IInputManager.rs
include/: bindings.h
input_manager/: Cargo.toml
input_manager/src/: lib.rs
src/: bindings.rs  composer_client.rs  input_manager.rs  main.rs  virtgpu_wayland.rs  wayland_client.rs
src/virtgpu_wayland/: .card.rs.rustfmt  card.rs
src/virtgpu_wayland/card/: bindings.rs
