[package]
name = "wayland_hwc3"
version = "0.1.0"
edition = "2021"

[dependencies]
binder = { package = "binder_ndk", version = "0.2.0" }
binder_tokio = "0.2.0"
nix = { version = "0.27.0", features = ["ioctl", "feature", "mman", "socket", "uio", "fs"] }
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.74"
wayrs-client = { version = "1.0.2", features = ["tokio"] }
wayrs-protocols = { version = "0.13.1", features = ["xdg-shell", "linux-dmabuf-unstable-v1"] }
wayrs-utils = { version = "0.14.0", features = ["shm_alloc", "dmabuf_feedback"]}
wayrs-egl = "0.5.0"
android_hardware_common = { path = "android_hardware_common" }
android_hardware_graphics_common = { path = "android_hardware_graphics_common" }
android_hardware_graphics_composer3 = { path = "android_hardware_graphics_composer3" }


[patch.crates-io]
shmemfdrs2 = { path = "../rust-deps/shmemfdrs2" }
libc = { path = "../rust-deps/libc" }
wayrs-client = { path = "../rust-deps/wayrs/wayrs-client" }
wayrs-protocols = { path = "../rust-deps/wayrs/wayrs-protocols" }
wayrs-utils = { path = "../rust-deps/wayrs/wayrs-utils" }
wayrs-egl = { path = "../rust-deps/wayrs/wayrs-egl" }
