[package]
name = "android_hardware_graphics_composer3"
version = "0.1.0"
edition = "2021"

[dependencies]
binder = { package = "binder_ndk", version = "0.2.0" }
lazy_static = "1.4.0"
async-trait = "0.1.74"
android_hardware_common = { path = "../android_hardware_common" }
android_hardware_graphics_common = { path = "../android_hardware_graphics_common" }
